<resources>
    <string name="app_name">Age Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="rateMeMenu">Rate Me</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="intestisial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="details_age">Details Age</string>
    <string name="next_birthday">Next Birthday</string>
    <string name="share_it">Share It</string>
    <string name="you_birthday_chart">You Birthday Chart</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_date">Current Date</string>
    <string name="calculate_age">Calculate Age</string>
</resources>
