<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:id="@+id/detailsAgeId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="100sp"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="20sp"
                        app:cardElevation="4sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5sp"
                            android:text="@string/details_age"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/detailAgeDesId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detailsAgeId"
                        android:layout_gravity="center"
                        android:layout_marginTop="-10sp"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="56sp"
                        app:cardElevation="3sp">

                        <TextView
                            android:id="@+id/details_ages_show"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10sp"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/detailAgeDes2Id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detailAgeDesId"
                        android:layout_gravity="center"
                        android:layout_marginTop="-10sp"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="45sp"
                        app:cardElevation="2sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10sp"
                            android:text="@string/next_birthday"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/nextBithdayShowId"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15sp"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/ShareMe"
                        android:layout_width="match_parent"
                        android:layout_height="56sp"
                        android:layout_below="@+id/detailAgeDes2Id"
                        android:layout_gravity="center"
                        android:layout_marginLeft="35sp"
                        android:layout_marginTop="-15sp"
                        android:layout_marginRight="35sp"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="26sp"
                        app:cardElevation="1sp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="40sp"
                                android:layout_alignLeft="@+id/calculateid"
                                android:layout_marginLeft="-41dp"
                                android:layout_marginTop="10sp"
                                android:src="@drawable/ic_share_black_24dp" />

                            <TextView
                                android:id="@+id/calculateid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/share_it"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:id="@+id/detailsAgechartId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="100sp"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="20sp"
                        app:cardElevation="5sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5sp"
                            android:text="@string/you_birthday_chart"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detailsAgechartId"
                        android:layout_gravity="center"
                        android:layout_marginTop="-10sp"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="56sp"
                        app:cardElevation="4sp">

                        <TextView
                            android:id="@+id/nBirthdayListId"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5sp"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>